# TP-SO-1C2022

./: .gitignore  CMakeLists.txt  Makefile  README.md
CPU/: CMakeLists.txt  Makefile  cpu.config
CPU/include/: cpu_action_performer.h  cpu_configuration_manager.h  cpu_connection_handler.h  cpu_instruction_cycle.h  cpu_kernel_connection_handler.h  cpu_kernel_dispatch_connection_handler.h  cpu_kernel_interrupt_connection_handler.h  cpu_logs_manager.h  cpu_manager.h  cpu_memory_connection_handler.h  cpu_mmu.h  cpu_query_performer.h  cpu_sanitizer.h  cpu_serializable_objects.h  cpu_tlb.h
CPU/src/: cpu_action_performer.c  cpu_configuration_manager.c  cpu_connection_handler.c  cpu_instruction_cycle.c  cpu_kernel_connection_handler.c  cpu_kernel_dispatch_connection_handler.c  cpu_kernel_interrupt_connection_handler.c  cpu_logs_manager.c  cpu_main.c  cpu_manager.c  cpu_memory_connection_handler.c  cpu_mmu.c  cpu_query_performer.c  cpu_sanitizer.c  cpu_serializable_objects.c  cpu_tlb.c
Config_Updater/: CMakeLists.txt  Makefile
Config_Updater/src/: config_updater.c
Console/: CMakeLists.txt  Makefile  console.config
Console/include/: console_args_parser.h  console_configuration.h  console_instruction_handler.h  console_kernel_connection.h  console_logs_manager.h  console_sanitizer.h
Console/src/: console_args_parser.c  console_configuration.c  console_instruction_handler.c  console_kernel_connection.c  console_logs_manager.c  console_main.c  console_sanitizer.c
Kernel/: CMakeLists.txt  Makefile  kernel.config  kernel_base.config  kernel_clock.config  kernel_planif_fifo.config  kernel_planif_srt.config  kernel_suspe_fifo.config  kernel_suspe_srt.config
Kernel/include/: kernel_configuration.h  kernel_console_connection.h  kernel_console_message_handler.h  kernel_cpu_connection.h  kernel_cpu_message_handler.h  kernel_event.h  kernel_fifo_algorithm.h  kernel_io_routine.h  kernel_logs_manager.h  kernel_long_term_scheduler.h  kernel_memory_connection.h  kernel_mid_term_scheduler.h  kernel_process_image.h  kernel_sanitizer.h  kernel_scheduler_queues.h  kernel_scheduling_algorithm.h  kernel_short_term_scheduler.h  kernel_srt_algorithm.h  kernel_state_transitions.h  planification.h  structs.h
Kernel/src/: kernel_configuration.c  kernel_console_connection.c  kernel_console_message_handler.c  kernel_cpu_connection.c  kernel_cpu_message_handler.c  kernel_event.c  kernel_fifo_algorithm.c  kernel_io_routine.c  kernel_logs_manager.c  kernel_long_term_scheduler.c  kernel_main.c  kernel_memory_connection.c  kernel_mid_term_scheduler.c  kernel_process_image.c  kernel_sanitizer.c  kernel_scheduler_queues.c  kernel_scheduling_algorithm.c  kernel_short_term_scheduler.c  kernel_srt_algorithm.c  kernel_state_transitions.c  planification.c
Memory/: CMakeLists.txt  Makefile  memory.config
Memory/include/: memory_configuration_manager.h  memory_connection_handler.h  memory_file_management.h  memory_logs_manager.h  memory_manager.h  memory_query_performers.h  memory_replacement_algorithms.h  memory_request_handler.h  memory_sanitizer.h  memory_serializable_objects.h
Memory/src/: memory_configuration_manager.c  memory_connection_handler.c  memory_file_management.c  memory_logs_manager.c  memory_main.c  memory_main.h  memory_manager.c  memory_query_performers.c  memory_replacement_algorithms.c  memory_request_handler.c  memory_sanitizer.c  memory_serializable_objects.c  swap.c  swap.h
Memory/src/resources/: memory.config
Utils/: CMakeLists.txt
Utils/include/: chained_evaluation.h  common_structures.h  configuration_manager.h  garbage_collector.h  general_logs.h  logger.h  operation_deserialization.h  operation_serialization.h  paths.h  pretty_printer.h  pthread_wrapper.h  queue_code_name_associations.h  request_bytes_calculator.h  serializable_objects.h  serialization_interface.h  socket.h  t_list_extension.h
Utils/src/: common_structures.c  configuration_manager.c  general_logs.c  operation_deserialization.c  operation_serialization.c  pretty_printer.c  queue_code_name_associations.c  request_bytes_calculator.c  serializable_objects.c  socket.c
